other-cel/advanced-restrict-image-registries/.chainsaw-test/ns-01.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    corp.com/allowed-registries: img.corp.com/
  name: imageregistries-ns01
