other-cel/advanced-restrict-image-registries/.chainsaw-test/ns-02.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    corp.com/allowed-registries: docker.io/
  name: imageregistries-ns02
