other-cel/advanced-restrict-image-registries/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy01
  namespace: imageregistries-ns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox01
        image: ghcr.io/busybox:1.35
      - name: busybox02
        image: corp.img.io/busybox:1.35
