other-cel/advanced-restrict-image-registries/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy01
  namespace: imageregistries-ns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox01
        image: ghcr.io/busybox:1.35
      - name: busybox02
        image: img.corp.com/busybox:1.35
